@@ -1,10 +1,10 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
-<addon id="plugin.video.veetle" version="0.3.4" name="Veetle" provider-name="fightnight (creator: t0mm0)">
-    <requires>
+<addon id="plugin.video.veetle" version="0.3.5" name="Veetle" provider-name="fightnight (creator: t0mm0)">    
+	<requires>
         <import addon="xbmc.python" version="2.1.0"/>
         <import addon="script.module.simplejson" version="2.0.10"/>
         <import addon="script.common.plugin.cache" version="1.3.0"/>
-	<import addon="repository.Cypherslocker" />
+	<import addon="repository.supremacy" />
     </requires>
     <extension point="xbmc.python.pluginsource" library="default.py">
         <provides>video</provides>
