@@ -1,3 +1,7 @@
+[B]Version 0.3.5 - fightnight/Leinad4Mind[/B]
+- Fixed some translations.
+- Fixed embed channel id support.
+
 [B]Version 0.3.4 - fightnight/Leinad4Mind[/B]
 - Fixed some translations.
 - Fixed embed channel id support.
